2004-06-24  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* libs/gst/bytestream/filepad.c: (gst_file_pad_available),
	(gst_file_pad_get_length):
	* libs/gst/bytestream/filepad.h:
	  add 2 new functions

2004-06-22  Zaheer Abbas Merali  <zaheerabbas at merali.org>

	* docs/gst/gstreamer-sections.txt:
	remove from docs, the define that Benjamin removed from gstelement.h

2004-06-22  Benjamin Otte  <otte@gnome.org>

	* gst/gstelement.h:
	  remove define that referenced a nonexisting GstElement struct member

2004-06-20  Benjamin Otte  <otte@gnome.org>

	* gst/gstdata.c: (gst_data_is_writable):
	  whoops, return values were wrong, so writable data was marked as
	  non-writable and vice versa. (fixes #143953, spotted by Francis
	  Labonte)
	  Shows how rarely we need to copy data ;)

2004-06-20  Benjamin Otte  <otte@gnome.org>

	* testsuite/schedulers/.cvsignore:
	* testsuite/schedulers/Makefile.am:
	* testsuite/schedulers/143777-2.c: (main):
	  add test for opt breakage in bug #143777

2004-06-20  Benjamin Otte  <otte@gnome.org>

	* gst/gstpad.c: (gst_pad_call_chain_function):
	  check for if we were unlinked while inside the chainfunction (fixes
	  entrygthread having issues with #143777)
	* testsuite/schedulers/143777.c: (main):
	* testsuite/schedulers/Makefile.am:
	  add a test for that fix

2004-06-20  Benjamin Otte  <otte@gnome.org>

	* gst/gstvalue.c: (gst_value_set_int_range):
	  test that start is smaller then end
	* libs/gst/bytestream/Makefile.am:
	* libs/gst/bytestream/filepad.c: 
	* libs/gst/bytestream/filepad.h:
	  add GstFilePad - a pad that behaves like a FILE*
	* testsuite/bytestream/.cvsignore:
	* testsuite/bytestream/Makefile.am:
	* testsuite/bytestream/filepadsink.c: 
	  test for the GstFilePad

2004-06-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/elements/gstidentity.c: (gst_identity_class_init),
	(gst_identity_init), (gst_identity_set_clock),
	(gst_identity_chain), (gst_identity_set_property),
	(gst_identity_get_property):